Agrega un perfil y un archivo de configuración para dicho perfil

--- a/dh-cuenta-service/src/main/resources/application.yaml
+++ b/dh-cuenta-service/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ spring:
     name: dh-cuenta-service
   config:
     import: configserver:http://localhost:8888
+  profiles:
+    active: dev
 
 management:
   endpoints:
